# shmowt

./: README.md  pyproject.toml
contrib/: config.ini
src/shmowt/: config.py  data.py  main.py
