[tool.poetry]
name = "shmowt"
version = "0.1.0"
description = ""
authors = ["Miguel Garcia <dev@migarcia.cat>"]
readme = "README.md"
packages = [{include = "shmowt", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13" # Imposed by river 0.21.0
scipy = "^1.11.4"
pandas = {version="^2.1.4", extras=["output-formatting"]}
matplotlib = "^3.8.2"
river = "^0.21.0"
scikit-learn = "^1.3.2"
h5py = "^3.11.0"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
